# password_manager

./: .gitignore  Cargo.toml  README.md  passwords.json
src/: main.rs  menu.rs  models.rs  storage.rs
