[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ErikBurton/password_manager.git"

[dependencies]
sha2 = "0.10"              # For password hashing (SHA256)
serde = { version = "1.0", features = ["derive"] }   # For serializing data
serde_json = "1.0"         # Save/load password data in JSON format
